# readRAW

./: CMakeLists.txt  README.md
include/: BounderVoxel.h  Drawmodel.h  Gui.h  RAWmodel.h  SOM.h  Vertex.h  camera.h  item.h  shader.h  world.h
shader/: fShader.fs  vShader.vs
src/: Drawmodel.cpp  Gui.cpp  RAWmodel.cpp  SOM.cpp  main.cpp  world.cpp
